# opensync-backend

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  contrib.md  database.db  hyprsync-backend.kdev4  main.c  migrate.c  requirements.txt
.github/workflows/: test.yml
.kdev4/: hyprsync-backend.kdev4
flask/: config.py  todo
flask/app/: __init__.py
flask/app/main/: __init__.py
flask/app/main/controller/: file_controller.py  user_controller.py
flask/app/main/model/: user.py
flask/app/main/service/: file_service.py  user_service.py
flask/app/main/util/: image_utils.py
flask/app/test/: file_controller_test.py  usertest.py
handler/: .file_handler.c.kate-swp  .user_handler.c.kate-swp  defaults.c  defaults.h  file_handler.c  file_handler.h  handler.c  handler.h  user_handler.c  user_handler.h
model/: .file.h.kate-swp  crypt.c  crypt.h  file.c  file.h  user.c  user.h
service/: .file_service.h.kate-swp  database.c  database.h  file_service.c  file_service.h  user_service.c  user_service.h
test/: .test_server.c.kate-swp  .tests.c.kate-swp  CMakeLists.txt  test_server.c  tests.c  tests.h  util.c  util.h
util/: config.c  config.h  util.c  util.h  var.h
